adapt assert to code reality, bug 364512 r/sr/a=dbaron